--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
   <body>
-    This is a test for random repo name
+    <h1>This is a test for random repo name</h1>
   </body>
 </html>
